[package]
name = "hello-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.8.4"
mini-redis = "0.4"

[[bin]]
name = "hello-rust"
path = "examples/hello_world.rs"
